force-app/main/default/objects/ThirdPartyHardware__c/ThirdPartyHardware__c.object-meta.xml
<CustomObject>
    <description>Third party hardware asset tie back.</description>
    <label>Third Party ASN</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party ASN</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>