force-app/main/default/objects/ThirdPartyHardware__c/fields/Arrow_PO__c.field-meta.xml
<CustomField>
    <fullName>Arrow_PO__c</fullName>
    <label>Arrow PO#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>