force-app/main/default/objects/ThirdPartyHardware__c/fields/Arrow_SO__c.field-meta.xml
<CustomField>
    <fullName>Arrow_SO__c</fullName>
    <label>Arrow SO#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>