force-app/main/default/objects/ThirdPartyHardware__c/fields/Date_of_Entry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Entry__c</fullName>
    <label>Date of Entry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>