force-app/main/default/objects/ThirdPartyHardware__c/fields/EDILineNumber__c.field-meta.xml
<CustomField>
    <fullName>EDILineNumber__c</fullName>
    <label>EDILineNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>