force-app/main/default/objects/ThirdPartyHardware__c/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <label>End User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>