force-app/main/default/objects/ThirdPartyHardware__c/fields/HW_part__c.field-meta.xml
<CustomField>
    <fullName>HW_part__c</fullName>
    <label>HW part #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>