force-app/main/default/objects/ThirdPartyHardware__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <label>ThirdPartyMonitor</label>
    <referenceTo>ThirdPartyMonitor__c</referenceTo>
    <relationshipName>ThirdPartyHardwares</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>