force-app/main/default/objects/ThirdPartyHardware__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipName>ThirdPartyHardwares</relationshipName>
    <type>Lookup</type>
</CustomField>