force-app/main/default/objects/ThirdPartyHardware__c/fields/PO_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Date__c</fullName>
    <label>PO Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>