force-app/main/default/objects/ThirdPartyHardware__c/fields/Process_History__c.field-meta.xml
<CustomField>
    <fullName>Process_History__c</fullName>
    <description>To capture the records updated and error obtained in course</description>
    <label>Process History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>