force-app/main/default/objects/ThirdPartyHardware__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>SerialNumber</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>