force-app/main/default/objects/ThirdPartyHardware__c/fields/ShipDate__c.field-meta.xml
<CustomField>
    <fullName>ShipDate__c</fullName>
    <label>ShipDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>