force-app/main/default/objects/ThirdPartyHardware__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>End_User__c</columns>
    <columns>Quantity__c</columns>
    <columns>NAME</columns>
    <columns>SerialNumber__c</columns>
    <columns>Process_History__c</columns>
    <columns>FileName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>