force-app/main/default/objects/ThirdPartyHardware__c/listViews/Pending_ASN.listView-meta.xml
<ListView>
    <fullName>Pending_ASN</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Process_History__c</columns>
    <columns>Status__c</columns>
    <columns>JobId__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OrderItem__c</columns>
    <columns>EDILineNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Internal Failure,Failed</value>
    </filters>
    <label>Pending ASN</label>
</ListView>